# Project-Ara

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CHANGELOG.md  FIXLIST.md  Project Ara MVP 2.0 – Multi‑Domain Technical Blueprint.md  Project Ara — Explainer.html  README.md  index.html  package-lock.json  package.json
docs/: graph-schema.md  sprint-plan-focused.md  vertical-slice-01.md
server/: Dockerfile  auth.js  index.js  package-lock.json  package.json  render.yaml  seed.js
spacetime-module/: Cargo.toml  README.md
spacetime-module/src/: lib.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth_server.rs  lib.rs  main.rs
src-tauri/src/auth/: db.rs  local.rs  mod.rs  oauth.rs  session.rs
src-tauri/src/commands/: auth_cmd.rs  canvas_cmd.rs  graph_cmd.rs  mod.rs  project_cmd.rs  scan_cmd.rs
src-tauri/src/graph/: mod.rs  ops.rs  schema.rs  types.rs
src-tauri/src/intelligence/: clustering.rs  linking.rs  mod.rs
src-tauri/src/parser/: mod.rs  shader.rs  tscn.rs
src-tauri/src/scanner/: classifier.rs  mod.rs  walker.rs
src-tauri/src/spacetimedb/: mod.rs  reducer.rs  schema.rs
src-tauri/src/utils/: error.rs
src/adapters/storage/: auth-store.ts
src/adapters/tauri/: commands.ts
src/components/auth/: AuthGate.tsx  (+2 more)
src/core/: auth.ts  canvas.ts  ecosystem.ts  graph.ts  project.ts
src/hooks/: useAuth.ts  useCanvas.ts  useGraph.ts  useIntelligence.ts  useProject.ts
src/lib/: auth-client.ts
src/styles/: colors.css  fonts.css  globals.css  theme.css
(+18 files in other folders)
